// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`timeInput > renders can move with arrow keys - 12-hour format 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
      >
        <label
          class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_3u_"
        >
          label
        </label>
        <span
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a"
        >
          labeldescription
        </span>
      </div>
      <div
        class="styles__ol8ybj0 styles_disabled_false__ol8ybj1 styles_size_large__ol8ybj5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_3v_"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuenow="12"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="hours-input"
              id="_r_3u_"
              placeholder="00"
              role="spinbutton"
              value="12"
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_3v_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="23"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="minutes-input"
              id="_r_3u_"
              placeholder="00"
              role="spinbutton"
              value="23"
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_3v_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="14"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="seconds-input"
              id="_r_3u_"
              placeholder="00"
              role="spinbutton"
              value="14"
            />
          </div>
          <input
            aria-describedby="_r_3v_"
            aria-valuemax="12"
            aria-valuemin="0"
            aria-valuenow="12"
            aria-valuetext="pm"
            autocomplete="off"
            class="styles__ol8ybj8 styles_period_true__ol8ybj9"
            data-size="large"
            data-testid="am-pm-input"
            id="_r_3u_"
            placeholder="AM"
            role="spinbutton"
            value="PM"
          />
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
        id="_r_3v_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders can move with arrow keys - 24-hour format 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
      >
        <label
          class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_4a_"
        >
          label
        </label>
        <span
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a"
        >
          labeldescription
        </span>
      </div>
      <div
        class="styles__ol8ybj0 styles_disabled_false__ol8ybj1 styles_size_large__ol8ybj5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_4b_"
              aria-valuemax="23"
              aria-valuemin="0"
              aria-valuenow="23"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="hours-input"
              id="_r_4a_"
              placeholder="00"
              role="spinbutton"
              value="23"
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_4b_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="23"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="minutes-input"
              id="_r_4a_"
              placeholder="00"
              role="spinbutton"
              value="23"
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_4b_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="14"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="seconds-input"
              id="_r_4a_"
              placeholder="00"
              role="spinbutton"
              value="14"
            />
          </div>
        </div>
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
        >
          <button
            aria-label="clear value"
            class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
            data-testid="clear"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                CloseIcon
              </title>
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
        id="_r_4b_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly clearable 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
      >
        <label
          class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_3g_"
        >
          label
        </label>
        <span
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a"
        >
          labeldescription
        </span>
      </div>
      <div
        class="styles__ol8ybj0 styles_disabled_false__ol8ybj1 styles_size_large__ol8ybj5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_3h_"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuenow="12"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="hours-input"
              id="_r_3g_"
              placeholder="00"
              role="spinbutton"
              value="12"
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_3h_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="minutes-input"
              id="_r_3g_"
              placeholder="00"
              role="spinbutton"
              value="00"
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_3h_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="seconds-input"
              id="_r_3g_"
              placeholder="00"
              role="spinbutton"
              value="00"
            />
          </div>
          <input
            aria-describedby="_r_3h_"
            aria-valuemax="12"
            aria-valuemin="0"
            aria-valuenow="0"
            aria-valuetext="am"
            autocomplete="off"
            class="styles__ol8ybj8 styles_period_true__ol8ybj9"
            data-size="large"
            data-testid="am-pm-input"
            id="_r_3g_"
            placeholder="AM"
            role="spinbutton"
            value="AM"
          />
        </div>
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
        >
          <button
            aria-label="clear value"
            class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_small__1x0t66mg styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
            data-testid="clear"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                CloseIcon
              </title>
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
        id="_r_3h_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly controlled - 12-hour format 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
      >
        <label
          class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_2o_"
        >
          label
        </label>
        <span
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a"
        >
          labeldescription
        </span>
      </div>
      <div
        class="styles__ol8ybj0 styles_disabled_false__ol8ybj1 styles_size_large__ol8ybj5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_2p_"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuenow="12"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="hours-input"
              id="_r_2o_"
              placeholder="00"
              role="spinbutton"
              value="12"
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_2p_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="23"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="minutes-input"
              id="_r_2o_"
              placeholder="00"
              role="spinbutton"
              value="23"
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_2p_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="7"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="seconds-input"
              id="_r_2o_"
              placeholder="00"
              role="spinbutton"
              value="07"
            />
          </div>
          <input
            aria-describedby="_r_2p_"
            aria-valuemax="12"
            aria-valuemin="0"
            aria-valuenow="0"
            aria-valuetext="am"
            autocomplete="off"
            class="styles__ol8ybj8 styles_period_true__ol8ybj9"
            data-size="large"
            data-testid="am-pm-input"
            id="_r_2o_"
            placeholder="AM"
            role="spinbutton"
            value="AM"
          />
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
        id="_r_2p_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly controlled - 24-hours format 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
      >
        <label
          class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_34_"
        >
          label
        </label>
        <span
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a"
        >
          labeldescription
        </span>
      </div>
      <div
        class="styles__ol8ybj0 styles_disabled_false__ol8ybj1 styles_size_large__ol8ybj5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_35_"
              aria-valuemax="23"
              aria-valuemin="0"
              aria-valuenow="23"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="hours-input"
              id="_r_34_"
              placeholder="00"
              role="spinbutton"
              value="23"
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_35_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="32"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="minutes-input"
              id="_r_34_"
              placeholder="00"
              role="spinbutton"
              value="32"
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_35_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="31"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="seconds-input"
              id="_r_34_"
              placeholder="00"
              role="spinbutton"
              value="31"
            />
          </div>
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
        id="_r_35_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <label
        class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        for="_r_6_"
      >
        test
      </label>
      <div
        class="styles__ol8ybj0 styles_disabled_true__ol8ybj2 styles_size_large__ol8ybj5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="hours-input"
              disabled=""
              id="_r_6_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="minutes-input"
              disabled=""
              id="_r_6_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="seconds-input"
              disabled=""
              id="_r_6_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <label
        class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        for="_r_1i_"
      >
        test
      </label>
      <div
        class="styles__ol8ybj0 styles_disabled_false__ol8ybj1 styles_size_large__ol8ybj5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="hours-input"
              id="_r_1i_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="minutes-input"
              id="_r_1i_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="seconds-input"
              id="_r_1i_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly readOnly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <label
        class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        for="_r_e_"
      >
        test
      </label>
      <div
        class="styles__ol8ybj0 styles_disabled_false__ol8ybj1 styles_readOnly_true__ol8ybj4 styles_size_large__ol8ybj5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="hours-input"
              id="_r_e_"
              placeholder="00"
              readonly=""
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="minutes-input"
              id="_r_e_"
              placeholder="00"
              readonly=""
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="seconds-input"
              id="_r_e_"
              placeholder="00"
              readonly=""
              role="spinbutton"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly required 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles__mxir930 styles_alignItems_flex-start_xxsmall__mxir93v styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j"
      >
        <label
          class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_10_"
        >
          test
        </label>
        <span
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        >
          *
        </span>
      </div>
      <div
        aria-required="true"
        class="styles__ol8ybj0 styles_disabled_false__ol8ybj1 styles_size_large__ol8ybj5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="hours-input"
              id="_r_10_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="minutes-input"
              id="_r_10_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="seconds-input"
              id="_r_10_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <label
        class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        for="_r_1a_"
      >
        test
      </label>
      <div
        class="styles__ol8ybj0 styles_disabled_false__ol8ybj1 styles_size_small__ol8ybj7 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="small"
              data-testid="hours-input"
              id="_r_1a_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="small"
              data-testid="minutes-input"
              id="_r_1a_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="small"
              data-testid="seconds-input"
              id="_r_1a_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly with 12-hour format 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <label
        class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        for="_r_1q_"
      >
        test
      </label>
      <div
        class="styles__ol8ybj0 styles_disabled_false__ol8ybj1 styles_size_large__ol8ybj5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="12"
              aria-valuemin="1"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="hours-input"
              id="_r_1q_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="minutes-input"
              id="_r_1q_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="seconds-input"
              id="_r_1q_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
          <input
            aria-valuemax="12"
            aria-valuemin="0"
            aria-valuenow="12"
            autocomplete="off"
            class="styles__ol8ybj8 styles_period_true__ol8ybj9"
            data-size="large"
            data-testid="am-pm-input"
            id="_r_1q_"
            placeholder="AM"
            role="spinbutton"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly with base props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles__ol8ybj0 styles_disabled_false__ol8ybj1 styles_size_large__ol8ybj5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="hours-input"
              id="_r_0_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="minutes-input"
              id="_r_0_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="seconds-input"
              id="_r_0_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <label
        class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        for="_r_m_"
      >
        test
      </label>
      <div
        class="styles__ol8ybj0 styles_disabled_false__ol8ybj1 styles_error_true__ol8ybj3 styles_size_large__ol8ybj5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_n_"
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="hours-input"
              id="_r_m_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_n_"
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="minutes-input"
              id="_r_m_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_n_"
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="seconds-input"
              id="_r_m_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
        </div>
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzg uv_icons_1sbwqkz1k"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_n_"
        role="status"
      >
        error
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly with helper and error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
      >
        <label
          class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_2c_"
        >
          label
        </label>
        <span
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a"
        >
          label description
        </span>
      </div>
      <div
        class="styles__ol8ybj0 styles_disabled_false__ol8ybj1 styles_error_true__ol8ybj3 styles_size_large__ol8ybj5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_2d_"
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="hours-input"
              id="_r_2c_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_2d_"
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="minutes-input"
              id="_r_2c_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_2d_"
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="seconds-input"
              id="_r_2c_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
        </div>
        <div
          class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzg uv_icons_1sbwqkz1k"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_2d_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly with label description and helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
      >
        <label
          class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_22_"
        >
          label
        </label>
        <h1>
          label
        </h1>
      </div>
      <div
        class="styles__ol8ybj0 styles_disabled_false__ol8ybj1 styles_size_large__ol8ybj5 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      >
        <div
          class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
        >
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_23_"
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="hours-input"
              id="_r_22_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_23_"
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="minutes-input"
              id="_r_22_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__ol8ybja style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            >
              :
            </span>
          </div>
          <div
            class="styles__mxir930 styles_flexDirection_row_xxsmall__mxir932j"
          >
            <input
              aria-describedby="_r_23_"
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__ol8ybj8"
              data-size="large"
              data-testid="seconds-input"
              id="_r_22_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
        id="_r_23_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;
